simplify presenter and further work on tests (click not yet working as expected)