@@ -48,6 +48,11 @@ limitations under the License.
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>12.0.0-SNAPSHOT</version>
@@ -148,6 +153,7 @@ limitations under the License.
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
+                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                     </argLine>
